# sugra-api-mcp

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  FACTS.md  README.md  SECURITY.md  TIER-GATE-PROBE.md  docker-compose.yml  glama.json  pyproject.toml  server.json
.github/: pull_request_template.md
.github/workflows/: deploy-app-vm.yml  publish-pypi.yml  publish-testpypi.yml  test.yml  tier-floor-paths.txt  tier-gate.yml  tier_gate.py
docs/: self-hosting.md
evals/: README.md  __init__.py  agent_eval.py  golden_queries.json  live_client.py  scoring.py  smoke_live.py
examples/: .env.example
examples/python-agent/: README.md  agent.py  requirements.txt
examples/typescript-agent/: README.md  agent.ts  package.json  tsconfig.json
scripts/: build_endpoint_catalog.py
sugra_api_mcp/: __init__.py  __main__.py  auth.py  client.py  config.py  observability.py  server.py  web.py
sugra_api_mcp/catalog/: __init__.py  aliases.py  builder.py  hints.py  loader.py  models.py  response.py  search.py  toolsets.py
sugra_api_mcp/catalog/data/: __init__.py  endpoints.json
sugra_api_mcp/tools/: __init__.py  agent.py  discovery.py  entities.py  events.py  food.py  fundamentals.py  gateway.py  government.py  macro.py  markets.py  news.py  physical.py  prompts.py  resources.py  trade.py  widgets.py
tests/: test_agent_tools.py  test_auth.py  test_catalog.py  test_cli.py  test_client_errors.py  test_cors.py  test_docker_artifacts.py  test_entities.py  test_evals_scoring.py  test_gateway.py  test_hints.py  test_keyless.py  test_metadata_sync.py  test_observability.py  test_prompts.py  test_registration.py  test_resources.py  test_search_relevance.py  test_tool_arg_schemas.py  test_web.py  test_widgets.py
tests/fixtures/: openapi_minimal.json
