[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "sugra-api-mcp"
version = "0.6.2"
description = "Gateway connector between LLM agents and Sugra API world data through a bundled endpoint catalog and operation_id calls. Works with Anthropic Claude, OpenAI GPT, Google Gemini, xAI, and any MCP-enabled IDE."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Sugra Systems, Inc.", email = "support@sugra.systems" },
    { name = "Arman Obosyan", email = "arman@sugra.systems" },
]
maintainers = [
    { name = "Arman Obosyan", email = "arman@sugra.systems" },
]
requires-python = ">=3.11"
keywords = [
    "mcp",
    "model-context-protocol",
    "sugra",
    "finance",
    "macro",
    "claude",
    "ai-agents",
    "llm",
    "data",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "mcp>=1.23.0",
    "httpx>=0.27",
    "pydantic>=2.9",
]

[project.optional-dependencies]
http = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "starlette>=0.40",
    "pyjwt[crypto]>=2.8",
    # Optional Azure Application Insights instrumentation. Loaded only when
    # APPLICATIONINSIGHTS_CONNECTION_STRING env var is set; absence is a
    # graceful no-op so stdio / dev users do not pull the SDK transitively.
    "azure-monitor-opentelemetry>=1.6",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.7",
    "mypy>=1.11",
]

[project.scripts]
sugra-api-mcp = "sugra_api_mcp.__main__:main"

[project.urls]
Homepage = "https://sugra.ai"
Documentation = "https://docs.sugra.ai"
Repository = "https://github.com/Sugra-Systems/prod-sugra-ai-MCP"
Issues = "https://github.com/Sugra-Systems/prod-sugra-ai-MCP/issues"
Security = "https://github.com/Sugra-Systems/prod-sugra-ai-MCP/blob/main/SECURITY.md"

[tool.hatch.build.targets.wheel]
packages = ["sugra_api_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"sugra_api_mcp/catalog/data/endpoints.json" = "sugra_api_mcp/catalog/data/endpoints.json"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
